Add extDescr to locales. Increase timeout to hide notification to 15 seconds

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -2,6 +2,9 @@
 	"extName": {
 		"message": "Forismatic quotes"
 	},
+	"extDescr": {
+		"message": "Show quote from Forismatic.com"
+	},
 	"language": {
 		"message": "Language"
 	},
