Show 3 last quotes

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -24,6 +24,6 @@
 		"message": "в минутах"
 	},
 	"lastQuote": {
-		"message": "Показать последнюю цитату"
+		"message": "Показать 3 последние цитаты"
 	}
 }
