--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -25,5 +25,11 @@
 	},
 	"lastQuote": {
 		"message": "Показать 3 последние цитаты"
+	},
+	"writeInVkontakte": {
+		"message": "Написать в контакте"
+	},
+	"writeInTwitter": {
+		"message": "Написать в твиттере"
 	}
 }
