save link, share with facebook

--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -31,5 +31,8 @@
 	},
 	"writeInTwitter": {
 		"message": "Написать в твиттере"
+	},
+	"writeInFacebook": {
+		"message": "Написать в фейсбук"
 	}
 }
