fix translate. Short text to twitter with link if needed

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -32,7 +32,7 @@
 	"writeInTwitter": {
 		"message": "Write in twitter"
 	},
-	"writeInTwitter": {
+	"writeInFacebook": {
 		"message": "Write in Facebook"
 	}
 }
